--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,12 +1,50 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2025-02-09 10:12:06 +0000 
+%% Created for Tuomas Eerola at 2025-02-09 14:06:26 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{trohidis2008multi,
+	author = {Trohidis, Konstantinos and Tsoumakas, Grigorios and Kalliris, George and Vlahavas, Ioannis P and others},
+	booktitle = {ISMIR},
+	date-added = {2025-02-09 10:52:50 +0000},
+	date-modified = {2025-02-09 10:52:50 +0000},
+	pages = {325--330},
+	title = {Multi-label classification of music into emotions.},
+	volume = {8},
+	year = {2008}}
+
+@inproceedings{sanden2011empirical,
+	author = {Sanden, Chris and Zhang, John Z},
+	booktitle = {ISMIR},
+	date-added = {2025-02-09 10:52:03 +0000},
+	date-modified = {2025-02-09 10:52:03 +0000},
+	pages = {717--722},
+	title = {An Empirical Study of Multi-Label Classifiers for Music Tag Annotation.},
+	year = {2011}}
+
+@inproceedings{chen2015amg1608,
+	author = {Chen, Yu-An and Yang, Yi-Hsuan and Wang, Ju-Chiang and Chen, Homer},
+	booktitle = {2015 IEEE international conference on acoustics, speech and signal processing (ICASSP)},
+	date-added = {2025-02-09 10:16:12 +0000},
+	date-modified = {2025-02-09 10:16:12 +0000},
+	organization = {IEEE},
+	pages = {693--697},
+	title = {The AMG1608 dataset for music emotion recognition},
+	year = {2015}}
+
+@inproceedings{soleymani20131000,
+	author = {Soleymani, Mohammad and Caro, Micheal N and Schmidt, Erik M and Sha, Cheng-Ya and Yang, Yi-Hsuan},
+	booktitle = {Proceedings of the 2nd ACM international workshop on Crowdsourcing for multimedia},
+	date-added = {2025-02-09 10:15:07 +0000},
+	date-modified = {2025-02-09 10:15:07 +0000},
+	pages = {1--6},
+	title = {1000 songs for emotional analysis of music},
+	year = {2013}}
 
 @inproceedings{eyben2010opensmile,
 	author = {Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn},
